kubernetes/svt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svt
  labels:
    environment: svt
